--- a/recognize.html
+++ b/recognize.html
@@ -8,17 +8,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
     <style>
+        a{color: #fff;}
         body{width: 100vw;height: 100vh;background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);  font-family: "Noto Sans TC", sans-serif;}
         #main{position: relative;width: 80vw;max-width: 500px;height: 80vw;max-height: 500px;background:#fafafa;border-radius: 30px;filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.1));margin: 30px auto 10px;display: flex;justify-content:center;align-items:center;}
-        #main p#en{font-size: 60px;font-weight: 900;text-align: center;padding: 0 40px;}
+        #main p#en{font-size: 60px;font-weight: 900;text-align: center;padding: 0 40px;line-height: 0.65em;}
         #main input#ch{font-size: 30px;font-weight: 900;text-align: center;border: 0;outline: none;display: inline-block;}
         #main input::-webkit-input-placeholder{color: rgba(0,0,0,0.3);}
         #en{margin-top: -15px;}
         #ch{position: absolute;bottom: 30px;padding: 5px 15px;background: #fff;border-radius: 30px;width: 150px; }
         #count{display: flex;justify-content:center;align-items:center;}
-        #correct,#wrong{width: 45vw;max-width: 160px;height: 50px;border-radius: 30px;text-align: center;padding: 5px 20px;margin: 15px 10px;color: #fff;font-size: 30px;font-weight: 700;}
+        #correct,#wrong{width: 30vw;max-width: 160px;height: 50px;border-radius: 30px;text-align: center;padding: 5px 20px;margin: 15px 10px;color: #fff;font-size: 30px;font-weight: 700;}
         #correct{background: #49D47E;}
         #wrong{background: #D4494B;}
+        .ch-answer { color: #fff;  font-size: 0.8em;}
+        .Copyright{font-size: 12px;color: #fff;text-align: center;margin-top: 50px;}
+        @media screen and (max-width:500px) {
+            #main p#en{font-size: 40px;}
+            
+        }
     </style>
 
 </head>
@@ -31,6 +38,7 @@
         <div id="correct">0</div>
         <div id="wrong">0</div>
     </div>
+    <div class="Copyright">Copyright © <a href="https://weitingtseng.github.io/profile/" target="_blank">waiting</a>. All rights reserved.</div>
     <script>
    document.addEventListener("DOMContentLoaded", () => {
     const enElement = document.getElementById("en");
@@ -43,10 +51,10 @@
     let words = [
     { en: "afternoon", ch: "下午" },
     { en: "evening", ch: "傍晚" },
-    { en: "fine", ch: "美好的；沒關係" },
-    { en: "good", ch: "好的" },
-    { en: "goodbye", ch: "再見" },
-    { en: "hello", ch: "哈囉；嗨" },
+    { en: "fine", ch: "美好的；沒關係；我很好；好" },
+    { en: "good", ch: "好的；棒；好" },
+    { en: "goodbye", ch: "再見；掰掰" },
+    { en: "hello", ch: "哈囉；你好" },
     { en: "morning", ch: "早上" },
     { en: "night", ch: "晚上" },
     { en: "thank", ch: "謝謝" },
@@ -57,46 +65,46 @@
     { en: "desk", ch: "書桌" },
     { en: "eraser", ch: "橡皮擦" },
     { en: "marker", ch: "麥克筆" },
-    { en: "notebook", ch: "筆記本" },
-    { en: "pen", ch: "原子筆" },
+    { en: "notebook", ch: "筆記本；筆電" },
+    { en: "pen", ch: "原子筆；筆" },
     { en: "pencil", ch: "鉛筆" },
-    { en: "pencilbox", ch: "鉛筆盒" },
+    { en: "pencilbox", ch: "鉛筆盒；筆盒" },
     { en: "ruler", ch: "尺" },
-    { en: "father", ch: "父親；爸爸" },
-    { en: "mother", ch: "母親；媽媽" },
-    { en: "dad", ch: "爸爸；爸" },
-    { en: "mom", ch: "媽媽；媽" },
-    { en: "grandfather", ch: "祖父；外公；阿公；爺爺" },
-    { en: "grandmother", ch: "祖母；外婆；阿嬤；奶奶" },
-    { en: "grandma", ch: "祖母；外婆；阿嬤；奶奶" },
-    { en: "grandpa", ch: "祖父；外公；阿公；爺爺" },
+    { en: "father", ch: "父親；爸爸；爸；爸比" },
+    { en: "mother", ch: "母親；媽媽；媽；媽咪" },
+    { en: "dad", ch: "父親；爸爸；爸；爸比" },
+    { en: "mom", ch: "母親；媽媽；媽；媽咪" },
+    { en: "grandfather", ch: "祖父；爺爺；阿公；外公" },
+    { en: "grandmother", ch: "祖母；奶奶；阿嬤；外婆" },
+    { en: "grandma", ch: "祖母；奶奶；阿嬤；外婆" },
+    { en: "grandpa", ch: "祖父；爺爺；阿公；外公" },
     { en: "brother", ch: "兄；弟；哥哥；弟弟；兄弟" },
-    { en: "sister", ch: "姐；妹；姊姊；妹妹；姊妹" },
-    { en: "girl", ch: "女孩" },
-    { en: "boy", ch: "男孩" },
+    { en: "sister", ch: "姐；妹；姐姐；姊姊；妹妹；姐妹；姊妹" },
+    { en: "girl", ch: "女孩；女生" },
+    { en: "boy", ch: "男孩；男生" },
     { en: "student", ch: "學生" },
     { en: "classmate", ch: "同學" },
     { en: "friend", ch: "朋友" },
-    { en: "Mr", ch: ",先生" },
+    { en: "Mr.", ch: "先生" },
     { en: "arm", ch: "手臂" },
     { en: "ear", ch: "耳朵" },
     { en: "eye", ch: "眼睛" },
     { en: "feet", ch: "雙腳" },
-    { en: "foot", ch: "腳" },
+    { en: "foot", ch: "腳；足" },
     { en: "hair", ch: "頭髮" },
     { en: "hand", ch: "手" },
     { en: "head", ch: "頭" },
     { en: "leg", ch: "腿" },
-    { en: "mouth", ch: "嘴" },
-    { en: "nose", ch: "鼻" },
+    { en: "mouth", ch: "嘴；嘴巴" },
+    { en: "nose", ch: "鼻；鼻子" },
     { en: "apple", ch: "蘋果" },
     { en: "banana", ch: "香蕉" },
     { en: "bread", ch: "麵包" },
     { en: "cake", ch: "蛋糕" },
-    { en: "egg", ch: "蛋" },
+    { en: "egg", ch: "蛋；雞蛋" },
     { en: "hamburger", ch: "漢堡" },
     { en: "hotdog", ch: "熱狗" },
-    { en: "icecream", ch: "冰淇淋" },
+    { en: "ice cream", ch: "冰淇淋" },
     { en: "juice", ch: "果汁" },
     { en: "milk", ch: "牛奶" },
     { en: "pizza", ch: "披薩" },
@@ -109,34 +117,34 @@
     { en: "lunch", ch: "午餐" },
     { en: "animal", ch: "動物" },
     { en: "bear", ch: "熊" },
-    { en: "bird", ch: "鳥" },
-    { en: "cat", ch: "貓" },
-    { en: "chicken", ch: "雞" },
-    { en: "dog", ch: "狗" },
-    { en: "elephant", ch: "象" },
+    { en: "bird", ch: "鳥；小鳥" },
+    { en: "cat", ch: "貓；貓咪；小貓" },
+    { en: "chicken", ch: "雞；小雞" },
+    { en: "dog", ch: "狗；小狗；狗狗" },
+    { en: "elephant", ch: "象；大象" },
     { en: "fish", ch: "魚" },
     { en: "lion", ch: "獅子" },
     { en: "monkey", ch: "猴子" },
     { en: "pig", ch: "豬" },
-    { en: "rabbit", ch: "兔" },
+    { en: "rabbit", ch: "兔；兔子" },
     { en: "snake", ch: "蛇" },
     { en: "tiger", ch: "老虎" },
     { en: "zoo", ch: "動物園" },
-    { en: "one", ch: "一" },
-    { en: "two", ch: "二" },
-    { en: "three", ch: "三" },
-    { en: "four", ch: "四" },
-    { en: "five", ch: "五" },
-    { en: "six", ch: "六" },
-    { en: "seven", ch: "七" },
-    { en: "eight", ch: "八" },
-    { en: "nine", ch: "九" },
-    { en: "ten", ch: "十" },
-    { en: "eleven", ch: "十一" },
-    { en: "twelve", ch: "十二" },
-    { en: "zero", ch: "零" },
-    { en: "bathroom", ch: "浴室" },
-    { en: "bedroom", ch: "臥房" },
+    { en: "one", ch: "一；1" },
+    { en: "two", ch: "二；2" },
+    { en: "three", ch: "三；3" },
+    { en: "four", ch: "四；4" },
+    { en: "five", ch: "五；5" },
+    { en: "six", ch: "六；6" },
+    { en: "seven", ch: "七；7" },
+    { en: "eight", ch: "八；8" },
+    { en: "nine", ch: "九；9" },
+    { en: "ten", ch: "十；10" },
+    { en: "eleven", ch: "十一；11" },
+    { en: "twelve", ch: "十二；12" },
+    { en: "zero", ch: "零；0" },
+    { en: "bathroom", ch: "浴室；廁所" },
+    { en: "bedroom", ch: "臥房；房間" },
     { en: "bookstore", ch: "書店" },
     { en: "classroom", ch: "教室" },
     { en: "home", ch: "家" },
@@ -147,26 +155,26 @@
     { en: "school", ch: "學校" },
     { en: "store", ch: "商店" },
     { en: "supermarket", ch: "超級市場" },
-    { en: "black", ch: "黑色的；黑色" },
-    { en: "blue", ch: "藍色的；藍色" },
-    { en: "brown", ch: "棕色的；棕色；咖啡色" },
-    { en: "color", ch: "顏色；色彩" },
-    { en: "green", ch: "綠色的；綠色" },
+    { en: "black", ch: "黑色的；黑色；黑" },
+    { en: "blue", ch: "藍色的；藍色；藍" },
+    { en: "brown", ch: "棕色的；棕色；棕；咖啡色" },
+    { en: "color", ch: "顏色" },
+    { en: "green", ch: "綠色的；綠色；綠" },
     { en: "orange", ch: "橘色的；橘色" },
-    { en: "pink", ch: "粉紅色的；粉紅；粉紅色" },
-    { en: "purple", ch: "紫色的；紫色" },
-    { en: "red", ch: "紅色的；紅色" },
-    { en: "white", ch: "白色的；白色" },
-    { en: "yellow", ch: "黃色的；黃色" },
-    { en: "dress", ch: "洋裝；裙子" },
+    { en: "pink", ch: "粉紅色的；粉紅色；粉紅" },
+    { en: "purple", ch: "紫色的；紫色；紫" },
+    { en: "red", ch: "紅色的；紅色；紅" },
+    { en: "white", ch: "白色的；白色；白" },
+    { en: "yellow", ch: "黃色的；黃色；黃" },
+    { en: "dress", ch: "洋裝" },
     { en: "hat", ch: "帽子" },
     { en: "jacket", ch: "夾克；外套" },
     { en: "shirt", ch: "襯衫" },
     { en: "shoes", ch: "鞋子" },
     { en: "shorts", ch: "短褲" },
     { en: "skirt", ch: "裙子" },
-    { en: "T-shirt", ch: "運動杉" },
-    { en: "bad", ch: "不好的；壞的" },
+    { en: "T-shirt", ch: "運動杉；短袖；T恤" },
+    { en: "bad", ch: "不好的；壞的；壞" },
     { en: "beautiful", ch: "美麗的；漂亮的" },
     { en: "big", ch: "大的" },
     { en: "clean", ch: "乾淨的" },
@@ -175,12 +183,12 @@
     { en: "cool", ch: "涼爽的" },
     { en: "cute", ch: "可愛的" },
     { en: "fat", ch: "胖的" },
-    { en: "handsome", ch: "英俊的" },
+    { en: "handsome", ch: "英俊的；帥的" },
     { en: "hot", ch: "熱的" },
     { en: "long", ch: "長的" },
     { en: "new", ch: "新的" },
     { en: "nice", ch: "不錯的" },
-    { en: "old", ch: "舊的；老的" },
+    { en: "old", ch: "舊的；老的；歲" },
     { en: "rainy", ch: "下雨的" },
     { en: "short", ch: "短的" },
     { en: "small", ch: "小的" },
@@ -192,12 +200,12 @@
     { en: "windy", ch: "有風的" },
     { en: "am", ch: "是" },
     { en: "are", ch: "是" },
-    { en: "close", ch: "關" },
+    { en: "close", ch: "關；關閉" },
     { en: "come", ch: "來" },
-    { en: "cook", ch: "煮" },
+    { en: "cook", ch: "煮；料理" },
     { en: "cut", ch: "切" },
     { en: "dance", ch: "跳舞" },
-    { en: "draw", ch: "畫" },
+    { en: "draw", ch: "畫；畫畫" },
     { en: "drink", ch: "喝" },
     { en: "eat", ch: "吃" },
     { en: "fly", ch: "飛" },
@@ -205,25 +213,25 @@
     { en: "go", ch: "去" },
     { en: "has", ch: "有" },
     { en: "have", ch: "有" },
-    { en: "help", ch: "幫忙" },
+    { en: "help", ch: "幫忙；救命" },
     { en: "is", ch: "是" },
     { en: "like", ch: "喜歡" },
     { en: "listen", ch: "聽" },
     { en: "look", ch: "看" },
     { en: "meet", ch: "遇見" },
-    { en: "open", ch: "開" },
-    { en: "play", ch: "玩" },
+    { en: "open", ch: "開；打開" },
+    { en: "play", ch: "玩；彈" },
     { en: "read", ch: "閱讀" },
     { en: "run", ch: "跑" },
     { en: "see", ch: "看到" },
-    { en: "sing", ch: "唱" },
-    { en: "sleep", ch: "睡" },
-    { en: "study", ch: "研讀；讀；讀書；學習" },
+    { en: "sing", ch: "唱；唱歌" },
+    { en: "sleep", ch: "睡；睡覺" },
+    { en: "study", ch: "研讀；學習；讀" },
     { en: "swim", ch: "游泳" },
     { en: "take", ch: "拿；搭" },
     { en: "talk", ch: "說" },
     { en: "walk", ch: "走" },
-    { en: "want", ch: "想要" },
+    { en: "want", ch: "想要；想" },
     { en: "wash", ch: "洗" },
     { en: "watch", ch: "看" },
     { en: "write", ch: "寫" },
@@ -253,7 +261,7 @@
     { en: "Chinese", ch: "中文" },
     { en: "English", ch: "英文" },
     { en: "math", ch: "數學" },
-    { en: "P", ch: "E.,體育" },
+    { en: "P.E.", ch: "體育" },
     { en: "baseball", ch: "棒球" },
     { en: "basketball", ch: "籃球" },
     { en: "dodgeball", ch: "躲避球" },
@@ -283,18 +291,18 @@
     { en: "Saturday", ch: "星期六；週六" },
     { en: "Sunday", ch: "星期天；週日" },
     { en: "at", ch: "在…；在" },
-    { en: "by", ch: "在旁；出自於" },
-    { en: "in", ch: "在…之內；裡面" },
-    { en: "on", ch: "在…之上；上面" },
-    { en: "out", ch: "向外；外面" },
+    { en: "by", ch: "在旁；出自於；出自；來自" },
+    { en: "in", ch: "在…之內；在之內" },
+    { en: "on", ch: "在…之上；在之上；在上面" },
+    { en: "out", ch: "向外；外" },
     { en: "outside", ch: "外面" },
     { en: "under", ch: "下面" },
     { en: "angry", ch: "生氣的" },
-    { en: "happy", ch: "高興的；開心的" },
-    { en: "hungry", ch: "餓的" },
-    { en: "sad", ch: "悲傷的；難過的" },
+    { en: "happy", ch: "高興的；開心的；快樂的" },
+    { en: "hungry", ch: "餓的；飢餓的" },
+    { en: "sad", ch: "悲傷的；難過的；不開心的" },
     { en: "sick", ch: "生病的" },
-    { en: "sorry", ch: "抱歉的" },
+    { en: "sorry", ch: "抱歉的；對不起" },
     { en: "thirsty", ch: "渴的" },
     { en: "tired", ch: "累的" },
     { en: "a", ch: "一個" },
@@ -304,8 +312,8 @@
     { en: "ball", ch: "球" },
     { en: "bed", ch: "床" },
     { en: "birthday", ch: "生日" },
-    { en: "box", ch: "盒子" },
-    { en: "can", ch: "罐頭" },
+    { en: "box", ch: "盒子；箱子" },
+    { en: "can", ch: "罐頭；可以" },
     { en: "CD", ch: "光碟" },
     { en: "comicbook", ch: "漫畫書" },
     { en: "day", ch: "日；天" },
@@ -314,15 +322,15 @@
     { en: "dollar", ch: "元" },
     { en: "door", ch: "門" },
     { en: "flower", ch: "花" },
-    { en: "great", ch: "棒的" },
+    { en: "great", ch: "棒的；很棒" },
     { en: "here", ch: "這裡" },
     { en: "key", ch: "鑰匙" },
     { en: "kite", ch: "風箏" },
-    { en: "may", ch: "可以" },
+    { en: "may", ch: "可以；或許" },
     { en: "name", ch: "名字" },
-    { en: "no", ch: "不" },
-    { en: "not", ch: "不" },
-    { en: "ok", ch: "好" },
+    { en: "no", ch: "不；不要；不可以；不好" },
+    { en: "not", ch: "不；不是" },
+    { en: "ok", ch: "好；可以；好的" },
     { en: "some", ch: "一些" },
     { en: "table", ch: "桌子" },
     { en: "telephone", ch: "電話" },
@@ -340,7 +348,7 @@
     { en: "very", ch: "非常" },
     { en: "weather", ch: "天氣" },
     { en: "window", ch: "窗戶" },
-    { en: "yes", ch: "是" }
+    { en: "yes", ch: "是；好；沒錯" }
     ];
 
     let currentWord = {}; // 當前顯示的單字
@@ -383,6 +391,12 @@
         if (event.key === "Enter") {
             const userInput = chInput.value.trim();
 
+            // 如果輸入是空值，則顯示提示並停止執行
+            if (userInput === "") {
+                alert("我沒有看到你的答案，請輸入中文翻譯唷！");
+                return;
+            }
+
             // 取得正確的所有中文翻譯（用「；」拆分）
             const correctAnswers = currentWord.ch.split("；").map(ans => ans.trim());
 
@@ -394,14 +408,14 @@
                 wrongCount++;
                 mainElement.style.background = "#D4494B"; // 紅色 (答錯)
                 wrongWords.push(currentWord); // 記錄錯誤的單字
-                enElement.textContent = `${currentWord.en} (${currentWord.ch})`;// #en 顯示正確的中文答案
+                enElement.innerHTML = `${currentWord.en}<br/><br/><span class="ch-answer">${currentWord.ch}</span>`;// #en 顯示正確的中文答案
             }
 
             // 更新計數
             updateCount();
 
             // 1 秒後顯示下一個單字並恢復背景
-            setTimeout(getRandomWord, 1000);
+            setTimeout(getRandomWord, 1200);
         }
     });
 
