--- a/recognize.html
+++ b/recognize.html
@@ -89,7 +89,7 @@
     { en: "arm", ch: "手臂" },
     { en: "ear", ch: "耳朵" },
     { en: "eye", ch: "眼睛" },
-    { en: "feet", ch: "雙腳" },
+    { en: "feet", ch: "雙腳；複數的腳" },
     { en: "foot", ch: "腳；足" },
     { en: "hair", ch: "頭髮" },
     { en: "hand", ch: "手" },
