--- a/spell.html
+++ b/spell.html
@@ -211,8 +211,8 @@
         { en: "fly", ch: "飛" },
         { en: "getup", ch: "起床" },
         { en: "go", ch: "去" },
-        { en: "has", ch: "有" },
-        { en: "have", ch: "有" },
+        { en: "has", ch: "(他)有" },
+        { en: "have", ch: "(我)有" },
         { en: "help", ch: "幫忙" },
         { en: "is", ch: "是" },
         { en: "like", ch: "喜歡" },
