--- a/recognize.html
+++ b/recognize.html
@@ -223,7 +223,7 @@
     { en: "play", ch: "玩；彈" },
     { en: "read", ch: "閱讀" },
     { en: "run", ch: "跑" },
-    { en: "see", ch: "看到" },
+    { en: "see", ch: "看到；看" },
     { en: "sing", ch: "唱；唱歌" },
     { en: "sleep", ch: "睡；睡覺" },
     { en: "study", ch: "研讀；學習；讀" },
@@ -236,8 +236,8 @@
     { en: "watch", ch: "看" },
     { en: "write", ch: "寫" },
     { en: "bike", ch: "腳踏車" },
-    { en: "bus", ch: "公車" },
-    { en: "car", ch: "汽車" },
+    { en: "bus", ch: "公車；巴士" },
+    { en: "car", ch: "汽車；車" },
     { en: "taxi", ch: "計程車" },
     { en: "train", ch: "火車" },
     { en: "he", ch: "他" },
@@ -293,17 +293,17 @@
     { en: "at", ch: "在…；在" },
     { en: "by", ch: "在旁；出自於；出自；來自" },
     { en: "in", ch: "在…之內；在之內" },
-    { en: "on", ch: "在…之上；在之上；在上面" },
+    { en: "on", ch: "在…之上；在之上；在上面；上面" },
     { en: "out", ch: "向外；外" },
     { en: "outside", ch: "外面" },
-    { en: "under", ch: "下面" },
+    { en: "under", ch: "下面；在下面；在底下" },
     { en: "angry", ch: "生氣的" },
     { en: "happy", ch: "高興的；開心的；快樂的" },
     { en: "hungry", ch: "餓的；飢餓的" },
     { en: "sad", ch: "悲傷的；難過的；不開心的" },
     { en: "sick", ch: "生病的" },
     { en: "sorry", ch: "抱歉的；對不起" },
-    { en: "thirsty", ch: "渴的" },
+    { en: "thirsty", ch: "渴的；口渴的" },
     { en: "tired", ch: "累的" },
     { en: "a", ch: "一個" },
     { en: "an", ch: "一個" },
