--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         .info {color:#444;width: 80vw;max-width: 500px;margin: 0 auto; padding: 0 20px 0 0;}
         .info a{color:#444;}
         .buttons{display: flex;;justify-content:center;align-items:center;flex-wrap:wrap;width: 100vw;max-width: 500px;margin: 0 auto;}
-        button{width: 80vw;max-width: 500px;margin: 10px 0;font-size: 24px;font-weight: 700;background: #fff;border: 0px;padding: 10px 20px;border-radius: 30px;}
+        button{width: 80vw;max-width: 500px;margin: 10px 0;font-size: 24px;font-weight: 700;background: #fff;border: 0px;padding: 10px 20px;border-radius: 30px;color:#000;}
         .Copyright{font-size: 12px;color: #fff;text-align: center;margin: 50px 0;}
         @media screen and (max-width:500px) {
             h1{font-size: 40px;}
